--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
     }
   </script>
 
+  <!-- Next Button -->
+    <a href="gallery.html" class="next-btn">Next ➜</a>
+  </div>
+
     <footer>
         <p>&copy; 2025 Sparks and Wires Electrical Services</p>
         </footer>
