--- a/gallery.html
+++ b/gallery.html
@@ -91,6 +91,10 @@
       }
     }
   </script>
+
+  <!-- Next Button -->
+    <a href="about.html" class="next-btn">Next ➜</a>
+  </div>
   
   <footer>
         <p>&copy; 2025 Sparks and Wires Electrical Services</p>
