--- a/about.html
+++ b/about.html
@@ -150,6 +150,10 @@
     }
   </script>
 
+  <!-- Next Button -->
+    <a href="services.html" class="next-btn">Next ➜</a>
+  </div>
+
     <footer>
         <p>&copy; 2025 Sparks and Wires Electrical Services</p>
         </footer>
