--- a/services.html
+++ b/services.html
@@ -70,6 +70,10 @@
     }
   </script>
 
+  <!-- Next Button -->
+    <a href="enquiry.html" class="next-btn">Next ➜</a>
+  </div>
+
     <footer>
         <p>&copy; 2025 Sparks and Wires Electrical Services</p>
         </footer>
