--- a/enquiry.html
+++ b/enquiry.html
@@ -113,6 +113,10 @@
     }
   </script>
 
+  <!-- Next Button -->
+    <a href="contact.html" class="next-btn">Next ➜</a>
+  </div>
+
     <footer>
         <p>&copy; 2025 Sparks and Wires Electrical Services</p>
         </footer>
