--- a/contact.html
+++ b/contact.html
@@ -123,6 +123,10 @@
     }
   </script>
 
+  <!-- Next Button -->
+    <a href="home.html" class="next-btn">Next ➜</a>
+  </div>
+
     <footer>
         <p>&copy; 2025 Sparks and Wires Electrical Services</p>
         </footer>
