--- a/contact.html
+++ b/contact.html
@@ -123,8 +123,8 @@
     }
   </script>
 
-  <!-- Next Button -->
-    <a href="home.html" class="next-btn">Next ➜</a>
+  <!-- Back Button -->
+    <a href="home.html" class="back-btn">Next ➜</a>
   </div>
 
     <footer>
