--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,8 @@
   </script>
 
   <!-- Back Button -->
-    <a href="home.html" class="back-btn">Next ➜</a>
+    <br>
+    <a href="index.html" class="back-btn">⬅ Back to Home</a>
   </div>
 
     <footer>
